# eRob_CANopen_Linux

./: README.md
src/: master.dcf
src/erob_canopen/: CMakeLists.txt  package.xml
src/erob_canopen/config/robot_control/: bus.yml  cia402_slave.eds
src/erob_canopen/launch/: robot_control.launch.py
src/erob_canopen/urdf/: eRob.xacro
src/erob_canopen/urdf/robot_control/: ZeroErrDriver.eds  ros2_controllers.yaml
src/erob_master/: CMakeLists.txt  README.md  package.xml
src/erob_master/config/: ZeroErrDriver.eds  bus.yml
src/erob_master/include/erob_master/: erob_master_node.hpp
src/erob_master/launch/: canopen_ros2.launch.py
src/erob_master/src/: erob_canoepn_ros2.cpp
src/ros2_canopen/.github/workflows/: humble.yml  iron.yml  rolling.yml
src/ros2_canopen/canopen_fake_slaves/launch/: basic_slave.launch.py  cia402_slave.launch.py
src/ros2_canopen/canopen_tests/config/cia402/: ZeroErrDriver.eds  bus.yml
src/ros2_canopen/canopen_tests/config/cia402_system/: bus.yml  master.dcf
src/ros2_canopen/canopen_tests/launch/: cia402_setup.launch.py  cia402_system.launch.py
